# django-tagulous

./: .gitignore  .travis.yml  CHANGES  LICENSE  MANIFEST.in  README.md  README.rst  README.txt  __init__.py  models.py  pyproject.toml  requirements.test.txt  setup.cfg  setup.py  tox.ini  utils.py  views.py
.github/workflows/: ci.yml  pypi.yml
docs/: Makefile  admin.rst  changelog.rst  comparison.rst  conf.py  contributing.rst  forms.rst  gitref.json  index.rst  installation.rst  introduction.rst  models.rst  parser.rst  requirements.txt  tag_options.rst  upgrading.rst  usage.rst  views.rst
docs/models/: fields.rst  index.rst  migrations.rst  tag_models.rst  tag_trees.rst  tagged_models.rst
example/: README.md  README.rst  db.sqlite3  manage.py
example/example/: admin.py  asgi.py  forms.py  models.py  settings.py  urls.py  views.py  wsgi.py
example/example/migrations/: 0001_initial.py  0002_auto_20190224_0637.py  0003_alter_person_title.py
example/example/templates/: base.html
example/example/templates/example/: index.html
static/tagulous/: tagwidget.css  tagwidget.js
tagulous/: CHANGES  __init__.py  admin.py  apps.py  checks.py  constants.py  forms.py  models.py  settings.py  utils.py  views.py
tagulous/contrib/: drf.py
tagulous/docs/: adaptors.rst  admin.rst  contributing.rst  forms.rst  index.rst  installation.rst  models.rst  usage.rst  views.rst
tagulous/management/commands/: initial_tags.py  initialtags.py
tagulous/models/: __init__.py  cast.py  descriptors.py  fields.py  initial.py  managers.py  migrations.py  models.py  options.py  queryset.py  signals.py  tagged.py  utils.py
tagulous/serializers/: base.py  json.py  python.py  pyyaml.py  xml_serializer.py
tagulous/signals/: post.py  pre.py
tagulous/static/tagulous/: tagulous.js  tagwidget.css  tagwidget.js
tagulous/static/tagulous/adaptor/: choices.js  select2-3.js  select2-4.js  select2.js
tagulous/templates/tagulous/admin/: merge_tags.html
tagulous/templatetags/: tagulous_compat.py
tagulous/tests/: __init__.py  lib.py  test_admin.py  test_commands.py  test_forms.py  test_forms_mixed.py  test_forms_singletagfield.py  test_forms_tagfield.py  test_models_migrations.py  test_models_order.py  test_models_queryset.py  test_models_singletagfield.py  test_models_tagfield.py  test_models_tagged.py  test_models_tagmodel.py  test_models_tree.py  test_options.py  test_utils.py  test_views.py  tests.py
tagulous/tests/app/: forms.py  models.py  urls.py  views.py
tagulous/tests/spec/javascripts/: tagulous.spec.js
tagulous/tests/tagulous_tests_app/: admin.py  forms.py  urls.py  views.py
tagulous/tests/tagulous_tests_app2/: models.py
tagulous/tests/tagulous_tests_migration/: models.py
tagulous/tests/tagulous_tests_migration/south_migrations_expected/: 0001_initial.py  0002_tagged.py  0003_tree.py  0004_data.py
tagulous/tests_app/: forms.py  models.py
tests/: __init__.py  lib.py  settings.py  test_admin.py  test_checks.py  test_commands.py  test_forms_mixed.py  test_forms_singletagfield.py  test_forms_tagfield.py  test_migrations_django.py  test_migrations_south.py  test_models_capitalised.py  test_models_cast.py  test_models_migrations.py  test_models_order.py  test_models_singletagfield.py  test_models_tagfield.py  test_models_tagged.py  test_models_tagmodel.py  test_models_tree.py  test_options.py  test_serializers.py  test_thirdparty_drf.py  test_utils.py  test_views.py  tests.py
tests/requirements/: base.txt  django-2.2.txt  django-3.2.txt  django-4.2.txt  django-5.1.txt  django-5.5.txt
tests/spec/javascripts/: tagulous.spec.js
tests/tagulousTestsApp3/: models.py
tests/tagulousTestsApp3/migrations/: 0001_initial.py
tests/tagulous_tests_app/: admin.py  cast.py  forms.py  models.py  urls.py  views.py
tests/tagulous_tests_app/fixtures/: mixed_test_fixtures.json  mixed_test_fixtures.xml  mixed_test_fixtures.yaml  simple_test_fixtures.json  simple_test_fixtures.xml  simple_test_fixtures.yaml  test_fixtures.json  test_fixtures.xml  test_fixtures.yaml
tests/tagulous_tests_app2/: models.py
tests/tagulous_tests_migration/: models.py
tests/tagulous_tests_migration/django_migrations_expected/: 0001_initial.py  0002_tagged.py  0003_tree.py  0004_data.py
tests/tagulous_tests_migration/south_migrations_expected/: 0001_initial.py  0002_tagged.py  0003_tree.py  0004_data.py
tests_app/: models.py
(+6 files in other folders)
