[metadata]
name = django-tagulous
description = Fabulous Tagging for Django
long_description = file: README.rst
keywords = django tagging
author = Richard Terry
author_email = code@radiac.net
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
url = https://radiac.net/projects/django-tagulous/
project_urls =
    Documentation = https://radiac.net/projects/django-tagulous/documentation/
    Source = https://github.com/radiac/django-tagulous
    Tracker = https://github.com/radiac/django-tagulous/issues

[options]
python_requires = >=3.6
packages = find:
install_requires = Django>=2.2
include_package_data = true
zip_safe = false

[options.packages.find]
exclude =
    tests*
    docs*

[tool:pytest]
python_paths = .
testpaths = tagulous tests
addopts = --black --isort --flake8 --cov=tagulous --cov-report=term --cov-report=html --ignore-glob=tests/tagulous_tests_migration/migrations_*
django_find_project = false
DJANGO_SETTINGS_MODULE = tests.settings

[coverage:run]
parallel=True

[flake8]
ignore = E123,E128,E203,E501,W503
max-line-length = 88
exclude = .git,__pycache__,build,dist,.tox

[isort]
multi_line_output = 3
line_length = 88
known_django = django
known_first_party = tagulous
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
include_trailing_comma = True
lines_after_imports = 2
skip = .tox,.git
[doc8]
max-line-length = 88
ignore-path = *.txt,.tox
